# aqa-test-task-eosda

./: .gitignore  README.md  pyproject.toml
aqa_test_task/: api.py  app.py  models.py
aqa_test_task/api_objects/: auth.py
aqa_test_task/page_objects/: auth.py  main_map.py
aqa_test_task/utils/: __init__.py  one_sec_mail.py
tests/: __init__.py  config.py  config.test.env.example  conftest.py  test_auth.py
