[tool.poetry]
name = "aqa-test-task"
version = "0.1.0"
description = ""
authors = ["Oleksii Platonov <ramm392@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selene = "^2.0.0b5"
Faker = "^13.15.0"
beautifulsoup4 = "^4.11.1"
pytz = "^2022.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
